<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/customerIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_id"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/customerSurnameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_surname"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/customerNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/customerMiddlenameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_middlename"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/customerAddressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_address"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/customerCreditCardNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_credit_card_number"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/customerBankAccountNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_bank_account_number"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

</LinearLayout>